--- a/232377812/metadata.yml
+++ b/232377812/metadata.yml
@@ -2,7 +2,7 @@
 :id: 232377812
 :submitters:
 - :name: Zamokuhle Maziya
-  :email: 2559327@students.wits.ac.za
+  :email: zamokuhlemaziya944@gmail.com
 :created_at: !ruby/object:ActiveSupport::TimeWithZone
   utc: 2024-02-20 07:44:10.079952000 Z
   zone: !ruby/object:ActiveSupport::TimeZone
