--- a/239954433/metadata.yml
+++ b/239954433/metadata.yml
@@ -2,7 +2,7 @@
 :id: 239954433
 :submitters:
 - :name: Zamokuhle Maziya
-  :email: 2559327@students.wits.ac.za
+  :email: zamokuhlemaziya944@gmail.com
 :created_at: !ruby/object:ActiveSupport::TimeWithZone
   utc: 2024-03-18 23:00:28.713474000 Z
   zone: !ruby/object:ActiveSupport::TimeZone
