--- a/236638834/metadata.yml
+++ b/236638834/metadata.yml
@@ -2,7 +2,7 @@
 :id: 236638834
 :submitters:
 - :name: Zamokuhle Maziya
-  :email: 2559327@students.wits.ac.za
+  :email: zamokuhlemaziya944@gmail.com
 :created_at: !ruby/object:ActiveSupport::TimeWithZone
   utc: 2024-03-05 09:38:43.565843000 Z
   zone: !ruby/object:ActiveSupport::TimeZone
